--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -23,7 +23,7 @@ permalink: /selectors
           </div>
         </div>
       </div>
-      <div class="inline middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+      <div class="inline align-middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
   </div>
 </div>
 
@@ -59,7 +59,7 @@ permalink: /selectors
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <div class="inline-block middle secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+    <div class="inline-block align-middle secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -140,14 +140,14 @@ permalink: /selectors
 <!-- Button -->
 <div class="btns">
   <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
-  <div class="inline baseline">or</div>
+  <div class="inline align-baseline">or</div>
   <button class="btn"><span>forget me tomorrow</span></button>
 </div>
 
 <!-- Button -->
 <div class="btns">
   <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
-  <div class="inline baseline">or</div>
+  <div class="inline align-baseline">or</div>
   <button class="btn btn--naked"><span>forget me tomorrow</span></button>
 </div>
 
@@ -485,14 +485,14 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__value">
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
@@ -501,17 +501,17 @@ permalink: /selectors
       </div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
@@ -527,7 +527,7 @@ permalink: /selectors
   <div class="field__label">Description</div>
   <div class="field__value">
     <div class="selector selector--expanded" >
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">improvement</div>
@@ -535,10 +535,10 @@ permalink: /selectors
       </div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">design</div>
@@ -553,14 +553,14 @@ permalink: /selectors
   <div class="field__label">Tags  Filter</div>
   <div class="field__value">
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--field">Design</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
@@ -569,17 +569,17 @@ permalink: /selectors
       </div>
     </div>
     <div class="selector selector--expanded JS_selector">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
     </div>
     <div class="selector selector--expanded JS_selector">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
           <div class="selector__blockPart selector__blockPart--field">front-end</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
@@ -595,13 +595,13 @@ permalink: /selectors
   <div class="field__label">Date  Filter</div>
   <div class="field__value">
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Include</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">And</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
@@ -609,16 +609,16 @@ permalink: /selectors
       </div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
     </div>
     <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Exclude</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">today</div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel font--label">Or</div>
+      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
           <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
