--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -6,6 +6,64 @@ permalink: /selectors
 
 <section style="min-height: 100vh;">
 
+  <!-- Field -->
+  <div class="field JS_field">
+    <div class="field__label">Checkbox</div>
+    <div class="field__value">
+      <div class="selector selector--singleselect selector--expanded animate--loading JS_selector">
+        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
+          </div>
+        </div>
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item JS_selectorItem">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Field -->
+  <div class="field JS_field">
+    <div class="field__label">Assigned to</div>
+    <div class="field__value">
+      <div class="selector selector--singleselect animate--loading">
+        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">Nick De Jaeger</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Field -->
+  <div class="field field--focus JS_field">
+    <div class="field__label">Assigned to</div>
+    <div class="field__value animate--loading">
+      <input type="text" value="Nick De Jaeger" class="field__input">
+    </div>
+  </div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h2>Tooltip/Error/Description</h2>
+
 <!-- Field -->
 <div class="field field--tooltip">
   <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
@@ -137,6 +195,8 @@ permalink: /selectors
   </div>
 </div>
 
+<h2>Buttons</h2>
+
 <!-- Button -->
 <div class="btns">
   <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
@@ -149,38 +209,6 @@ permalink: /selectors
   <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
   <div class="inline align-baseline">or</div>
   <button class="btn btn--naked"><span>forget me tomorrow</span></button>
-</div>
-
-</section>
-
-
-
-
-
-
-
-
-
-<!-- Field -->
-<div class="field JS_field">
-  <div class="field__label">Assigned to</div>
-  <div class="field__value">
-    <div class="selector selector--singleselect">
-      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Nick De Jaeger</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Field -->
-<div class="field JS_field">
-  <div class="field__label">Assigned to</div>
-  <div class="field__value">
-    <input type="text" value="" class="field__input">
-  </div>
 </div>
 
 <h2>Without popup</h2>
@@ -329,68 +357,6 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field JS_field">
-  <div class="field__label">Status</div>
-  <div class="field__value">
-    <div class="selector selector--singleselect selector--expanded JS_selector">
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Not started</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Paused</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Done</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Rejected</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Lorem ipsum dolo rsit amet lore ipsum dolor sit amet lorem</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Ipsum</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Dolor</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator"></div>
-      <div class="selector__item JS_selectorItem">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">Amet</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Field -->
-<div class="field JS_field">
   <div class="field__label">Checkbox (filter in header)</div>
   <div class="field__value">
     <div class="selector selector--multiselect selector--expanded JS_selector">
@@ -480,47 +446,6 @@ permalink: /selectors
 </div>
 
 <h2>Filters</h2>
-
-<!-- Field -->
-<div class="field JS_field">
-  <div class="field__value">
-    <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
-          <div class="selector__blockPart selector__blockPart--field">Design</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-          <div class="selector__blockPart selector__blockPart--field">Marketing</div>
-        </div>
-      </div>
-    </div>
-    <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-    </div>
-    <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-          <div class="selector__blockPart selector__blockPart--field">front-end</div>
-        </div>
-      </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
-          <div class="selector__blockPart selector__blockPart--field">back-end</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Field -->
 <div class="field JS_field">
