overlay with type colors

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -66,7 +66,7 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field field--tooltip">
-  <div class="field__label JS_has-popup" data-popid="#multiSelector-privacy">Privacy Policy </div>
+  <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy </div>
   <div class="field__value">
       <div class="selector selector--singleselect selector--expanded JS_selector">
         <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
