add white bg for blocks in drag mode

--- a/pages/drag.html
+++ b/pages/drag.html
@@ -28,6 +28,9 @@ permalink: /drag
   .selector--draggable .selector__item {
     cursor: move;
   }
+  .selector--draggable .selector__block {
+    background-color: #FFF;
+  }
 
   .ui-widget-content .selector:hover {
     background-image: repeating-linear-gradient(
