drag: bg att fixed

--- a/pages/drag.html
+++ b/pages/drag.html
@@ -18,6 +18,7 @@ permalink: /drag
     transition: all .3s ease-in-out;
     border-color: transparent;
     background-size: 200% 200%;
+    background-attachment: fixed;
     background-image: repeating-linear-gradient(
       45deg,
       rgba(0, 0, 0, 0.2),
