--- a/pages/drag.html
+++ b/pages/drag.html
@@ -1,5 +1,5 @@
 ---
-layout: selectors
+layout: drag
 title: Drag
 permalink: /drag
 ---
@@ -79,8 +79,7 @@ permalink: /drag
     z-index: 1;
   }
 </style>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 <script>
   $(function() {
     $(".ui-widget-content").draggable();
