fix jquery-ui for drag

--- a/pages/drag.html
+++ b/pages/drag.html
@@ -79,7 +79,8 @@ permalink: /drag
     z-index: 1;
   }
 </style>
-
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
   $(function() {
     $(".ui-widget-content").draggable();
