update drag items

--- a/pages/drag.html
+++ b/pages/drag.html
@@ -75,9 +75,10 @@ permalink: /drag
   <div class="ui-widget-content">
 
     <div class="selector selector--expanded selector--draggable">
+      <!--<div class="selector__itemSeperator selector__itemSeperator--hasLabel h6"></div>-->
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
           <div class="selector__blockPart selector__blockPart--label">4362</div>
           <div class="selector__blockSeperator"></div>
           <div class="selector__blockPart selector__blockPart--field">Bulk update speed regressed in 282.0</div>
@@ -92,7 +93,7 @@ permalink: /drag
     <div class="selector selector--expanded selector--draggable">
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
           <div class="selector__blockPart selector__blockPart--label">7654</div>
           <div class="selector__blockSeperator"></div>
           <div class="selector__blockPart selector__blockPart--field">Add indicators in import/export</div>
