inline actions/error animation icon

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -41,7 +41,7 @@ permalink: /selectors
   </div>
 
   <!-- Field -->
-  <div class="field field--focus JS_field">
+  <div class="field JS_field">
     <div class="field__label">Assigned to</div>
     <div class="field__value animate--loading">
       <input type="text" value="Nick De Jaeger" class="field__input">
@@ -64,7 +64,7 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field field--tooltip">
-  <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy </div>
+  <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action"></div></div>
   <div class="field__value">
       <div class="selector selector--singleselect selector--expanded JS_selector">
         <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
@@ -115,7 +115,7 @@ permalink: /selectors
 <div class="field field--error JS_field">
   <div class="field__label">Status</div>
   <div class="field__value">
-    <div class="inline-block align-middle secondary JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+    <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
