shadow drag mode

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -64,7 +64,7 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field field--tooltip">
-  <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action"></div></div>
+  <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action animate-fly-in-left"></div></div>
   <div class="field__value">
       <div class="selector selector--singleselect selector--expanded JS_selector">
         <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
