Error example animation, fix
- fixed filter
- added animation

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -112,10 +112,10 @@ permalink: /selectors
 </div>
 
 <!-- Field -->
-<div class="field field--error JS_field">
+<div class="field JS_field JS_field--error">
   <div class="field__label">Status</div>
-  <div class="field__value">
-    <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
+  <div class="field__value" style="left: -35px; transition: left 1s ease;">
+    <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error JS_errorActionIcon" data-popid="#ms-error" style="opacity: 0;"></div>
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -152,13 +152,13 @@ permalink: /selectors
     <ul class="itemBox__row">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          <input type="search" class="JS_filterInput" placeholder="filter through items">
+          <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through statuses">
         </div>
       </li>
     </ul>
   </div>
   <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
+    <ul class="itemBox__row itemBox__row--custom JS_itemBoxRow--error" style="display: none;">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
           <div class="note note--error">
@@ -170,7 +170,7 @@ permalink: /selectors
   </div>
   <div class="itemBox JS_optionsChildren">
     {% for item in site.data.multiselector-status.items %}
-      <ul class="itemBox__row itemBox__row--item JS_filterable">
+      <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_error-popupRow">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
             <div class="itemBox__value">
@@ -599,4 +599,26 @@ permalink: /selectors
       }
     });
   }
+
+// error field, by default don't show errors
+  $('.JS_field--error').each(function(){
+    const errorField = $(this);
+    errorField.find('.JS_has-popup').removeClass('JS_has-popup--error');
+    const icon = errorField.find('.JS_errorActionIcon');
+    $(icon).removeClass('animate-fly-in-left');
+  });
+
+$("#ms-status .JS_error-popupRow").on('click', function(){
+  closeOverlay();
+  $("#ms-status .JS_itemBoxRow--error").css('display', 'flex');
+  $('.JS_field--error').each(function(){
+    const errorField = $(this);
+    errorField.addClass('field--error');
+    errorField.find('.JS_has-popup').addClass('JS_has-popup--error');
+    errorField.find('.field__value').css('left', '0');
+
+    const icon = errorField.find('.JS_errorActionIcon');
+    $(icon).addClass('animate-fly-in-left').css('opacity', 1);
+  });
+});
 </script>
